Mis les bordures de la zone de texte

--- a/index.html
+++ b/index.html
@@ -1,11 +1,133 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css">
-    <title></title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/styles.css">
+  <title>Chatbox</title>
+</head>
+<body>
+    <div class="chatbox-container"></div>
+  <header>
+    <img src="" alt="Photo de profil">
+    <h1>Dorian</h1>
+  </header>
+  <main>
+    <div class="Yuna">
+      <p cla>
+        Hello tu fais quoi se week-end ?
 
-  <body></body>
+    </div>
+    <div class="emeteur">
+      <p>
+        Salut rien pourquoi?
+      </p>
+    </div>
+    <div class="Yuna">
+      <p>
+        J'ai entendu parler d'un rassemblement qui
+        aura lieu ce week-end, tu veux venir avec moi ?
+      </p>
+    </div>
+    <div class="emeteur">
+      <p>
+        Ouais j'adore les rassemblements.
+      </p>
+    </div>
+    <div class="Yuna">
+      <p>
+        Cool ! J’espère qu’il y aura de belles voitures
+      </p>
+    </div>
+    <div class="emeteur">
+      <p>
+        Ça a l'air vraiment cool ! Est-ce qu'il y a une
+        que tu aimerais voir ?
+      </p>
+    </div>
+    <div class="Yuna">
+      <p>
+        J'aimerais beaucoup voir une Silvia s15,
+        c'est l'une de mes voitures préférées. Et toi ?
+      </p>
+    </div>
+    <div class="Yuna">
+      <img src="" alt="">
+    </div>
+    <div class="emeteur">
+      <p>
+        J'aimerais beaucoup voir une éclipse, j'ai
+        toujours été fasciné par cette voiture.
+      </p>
+    </div>
+    <div class="emeteur">
+      <img src="" alt="">
+    </div>
+    <div class="Yuna">
+      <p>
+        Mais elles sont trop moches ses voitures
+        comment tu peux aimer ça
+      </p>
+    </div>
+    <div class="emeteur">
+      <p>
+        Je peux aimer celle que je veux pourquoi tu
+        réagis comme ça ?
+      </p>
+    </div>
+    <div class="destinataire">
+      <p>
+        Bah elles ne sont pas belles en plus le bruit est horrible.
+      </p>
+    </div>
+    <div class="emeteur">
+      <p>
+        Franchement j’ai la flemme de venir si c’est pour juger mes gouts de
+        voiture. Je préfère rester chez moi.
+      </p>
+    </div>
+    <div class="destinataire">
+      <p>
+        Mais ne le prends pas comme ça. Aller vient
+        et si tu veux on pourra aller voir ta voiture.
+      </p>
+    </div>
+    <div class="emeteur">
+      <p>
+        Bref, tu as des informations sur l'emplacement et l'heure?
+      </p>
+    </div>
+    <div class="destinataire">
+      <p>
+        Oui, c'est dans le parc du centre-ville et ça commence à 10 heures du
+        matin. On peut se retrouver devant l'entrée principale vers 10h30,
+        ça te va ?
+      </p>
+    </div>
+    <div class="emeteur">
+      <p>
+        Ok, c'est noté.
+      </p>
+    </div>
+    <div class="emeteur">
+      <img src="" alt="">
+    </div>
+    <div class="destinataire">
+      <p>
+        On se voit samedi prochain!
+      </p>
+    </div>
+    <div class="emeteur">
+      <p>
+        Ouais à samedi !
+      </p>
+    </div>
+
+
+
+
+
+  </main>
+</body>
+
 </html>
