mis les noms des personnage dans les class et mis les textes

--- a/index.html
+++ b/index.html
@@ -7,51 +7,49 @@
   <title>Chatbox</title>
 </head>
 <body>
-    <div class="chatbox-container"></div>
   <header>
     <img src="" alt="Photo de profil">
     <h1>Dorian</h1>
   </header>
   <main>
-    <div class="Yuna">
-      <p cla>
+    <div class="Dorian">
+      <p>
         Hello tu fais quoi se week-end ?
-
     </div>
-    <div class="emeteur">
+    <div class="Yuna">
       <p>
         Salut rien pourquoi?
       </p>
     </div>
-    <div class="Yuna">
+    <div class="Dorian">
       <p>
         J'ai entendu parler d'un rassemblement qui
         aura lieu ce week-end, tu veux venir avec moi ?
       </p>
     </div>
-    <div class="emeteur">
+    <div class="Yuna">
       <p>
         Ouais j'adore les rassemblements.
       </p>
     </div>
-    <div class="Yuna">
+    <div class="Dorian">
       <p>
         Cool ! J’espère qu’il y aura de belles voitures
       </p>
     </div>
-    <div class="emeteur">
+    <div class="Yuna">
       <p>
         Ça a l'air vraiment cool ! Est-ce qu'il y a une
         que tu aimerais voir ?
       </p>
     </div>
-    <div class="Yuna">
+    <div class="Dorian">
       <p>
         J'aimerais beaucoup voir une Silvia s15,
         c'est l'une de mes voitures préférées. Et toi ?
       </p>
     </div>
-    <div class="Yuna">
+    <div class="Dorian">
       <img src="" alt="">
     </div>
     <div class="emeteur">
@@ -60,64 +58,64 @@
         toujours été fasciné par cette voiture.
       </p>
     </div>
-    <div class="emeteur">
+    <div class="Yuna">
       <img src="" alt="">
     </div>
-    <div class="Yuna">
+    <div class="Dorian">
       <p>
         Mais elles sont trop moches ses voitures
         comment tu peux aimer ça
       </p>
     </div>
-    <div class="emeteur">
+    <div class="Yuna">
       <p>
         Je peux aimer celle que je veux pourquoi tu
         réagis comme ça ?
       </p>
     </div>
-    <div class="destinataire">
+    <div class="Dorian">
       <p>
         Bah elles ne sont pas belles en plus le bruit est horrible.
       </p>
     </div>
-    <div class="emeteur">
+    <div class="Yuna">
       <p>
         Franchement j’ai la flemme de venir si c’est pour juger mes gouts de
         voiture. Je préfère rester chez moi.
       </p>
     </div>
-    <div class="destinataire">
+    <div class="Dorian">
       <p>
         Mais ne le prends pas comme ça. Aller vient
         et si tu veux on pourra aller voir ta voiture.
       </p>
     </div>
-    <div class="emeteur">
+    <div class="Yuna">
       <p>
         Bref, tu as des informations sur l'emplacement et l'heure?
       </p>
     </div>
-    <div class="destinataire">
+    <div class="Dorian">
       <p>
         Oui, c'est dans le parc du centre-ville et ça commence à 10 heures du
         matin. On peut se retrouver devant l'entrée principale vers 10h30,
         ça te va ?
       </p>
     </div>
-    <div class="emeteur">
+    <div class="Yuna">
       <p>
         Ok, c'est noté.
       </p>
     </div>
-    <div class="emeteur">
+    <div class="Yuna">
       <img src="" alt="">
     </div>
-    <div class="destinataire">
+    <div class="Dorian">
       <p>
         On se voit samedi prochain!
       </p>
     </div>
-    <div class="emeteur">
+    <div class="Yuna">
       <p>
         Ouais à samedi !
       </p>
