correction des noms de class

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/styles.css">
-  <title>Chatbox</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet">
@@ -14,6 +13,7 @@
     <img src="" alt="Photo de profil">
     <h1>Dorian</h1>
   </header>
+  <div class="chatbox-container">
   <main>
     <div class="Dorian">
       <p>
@@ -55,7 +55,7 @@
     <div class="Dorian">
       <img src="" alt="">
     </div>
-    <div class="emeteur">
+    <div class="Yuna">
       <p>
         J'aimerais beaucoup voir une éclipse, j'ai
         toujours été fasciné par cette voiture.
@@ -124,11 +124,8 @@
       </p>
     </div>
 
-
-
-
-
   </main>
+  </div>
 </body>
 
 </html>
