Ajout de photo test + correction font + ajout de l'icon micro

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200&family=Roboto&display=swap" rel="stylesheet">
   <title>Chatbox</title>
 </head>
 <body>
   <header>
-    <img src="" alt="Photo de profil">
+    <img src="img/photo_profil.jpg" alt="Photo de profil">
     <h1>Dorian</h1>
   </header>
   <div class="chatbox-container">
@@ -63,7 +63,7 @@
         </p>
       </div>
       <div class="Yuna">
-        <img src="" alt="">
+        <img src="img/eclipse.jpg" alt="voiture eclipse">
       </div>
       <div class="Dorian">
         <p>
@@ -101,8 +101,8 @@
       </div>
       <div class="Dorian">
         <p>
-          Oui, c'est dans le parc du centre-ville et ça commence à 10 heures du
-          matin. On peut se retrouver devant l'entrée principale vers 10h30,
+          Oui, c'est dans le parc du centre-ville et ça commence à 10 heures du matin. On peut se retrouver devant
+          l'entrée principale vers 10h30,
           ça te va ?
         </p>
       </div>
@@ -112,7 +112,7 @@
         </p>
       </div>
       <div class="Yuna">
-        <img src="" alt="">
+        <img src="" alt="Ok">
       </div>
       <div class="Dorian">
         <p>
@@ -126,10 +126,10 @@
       </div>
     </main>
   </div>
-    <footer>
-      <input placeholder="Trypping..." type="text">
-      <button>Send</button>
-    </footer>
+  <footer>
+    <input placeholder="Tryping..." type="text">
+    <button>Send</button>
+    <img src="img/micro.png" alt="micro">
+  </footer>
 </body>
-
 </html>
