--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </p>
       </div>
       <div class="Dorian">
-        <img src="" alt="">
+        <img src="img/s15.png" alt="silvia s15">
       </div>
       <div class="Yuna">
         <p>
@@ -62,7 +62,7 @@
           toujours été fasciné par cette voiture.
         </p>
       </div>
-      <div class="Yuna">
+      <div>
         <img src="img/eclipse.jpg" alt="voiture eclipse">
       </div>
       <div class="Dorian">
@@ -111,8 +111,8 @@
           Ok, c'est noté.
         </p>
       </div>
-      <div class="Yuna">
-        <img src="" alt="Ok">
+      <div>
+        <img src="img/Gif-chat-ok.gif" alt="Ok">
       </div>
       <div class="Dorian">
         <p>
