correction HTML CSS

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200&family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200&family=Roboto&display=swap"
+    rel="stylesheet">
   <title>Chatbox</title>
 </head>
+
 <body>
   <header>
     <img src="img/photo_profil.jpg" alt="Photo de profil">
@@ -16,14 +18,18 @@
   </header>
   <div class="chatbox-container">
     <main>
-      <div class="Dorian">
-        <p>
-          Hello tu fais quoi se week-end ?
+      <div class="grande-bulle">
+        <div class="Dorian">
+          <p>
+            Hello tu fais quoi se week-end ?
+        </div>
       </div>
-      <div class="Yuna">
-        <p>
-          Salut rien pourquoi?
-        </p>
+      <div class="moyen-bulle">
+        <div class="Yuna">
+          <p>
+            Salut rien pourquoi?
+          </p>
+        </div>
       </div>
       <div class="Dorian">
         <p>
@@ -31,10 +37,12 @@
           aura lieu ce week-end, tu veux venir avec moi ?
         </p>
       </div>
-      <div class="Yuna">
-        <p>
-          Ouais j'adore les rassemblements.
-        </p>
+      <div class="moyen-bulle">
+        <div class="Yuna">
+          <p>
+            Ouais j'adore les rassemblements.
+          </p>
+        </div>
       </div>
       <div class="Dorian">
         <p>
@@ -62,7 +70,7 @@
           toujours été fasciné par cette voiture.
         </p>
       </div>
-      <div>
+      <div class="Yuna">
         <img src="img/eclipse.jpg" alt="voiture eclipse">
       </div>
       <div class="Dorian">
@@ -101,17 +109,20 @@
       </div>
       <div class="Dorian">
         <p>
-          Oui, c'est dans le parc du centre-ville et ça commence à 10 heures du matin. On peut se retrouver devant
+          Oui, c'est dans le parc du centre-ville et ça commence à 10 heures du 
+          matin. On peut se retrouver devant
           l'entrée principale vers 10h30,
           ça te va ?
         </p>
       </div>
-      <div class="Yuna">
-        <p>
-          Ok, c'est noté.
-        </p>
+      <div class="petite-bulle">
+        <div class="Yuna">
+          <p>
+            Ok, c'est noté.
+          </p>
+        </div>
       </div>
-      <div>
+      <div class="Yuna">
         <img src="img/Gif-chat-ok.gif" alt="Ok">
       </div>
       <div class="Dorian">
@@ -119,10 +130,12 @@
           On se voit samedi prochain!
         </p>
       </div>
-      <div class="Yuna">
-        <p>
-          Ouais à samedi !
-        </p>
+      <div class="petite-bulle">
+        <div class="Yuna">
+          <p>
+            Ouais à samedi !
+          </p>
+        </div>
       </div>
     </main>
   </div>
@@ -132,4 +145,5 @@
     <img src="img/micro.png" alt="micro">
   </footer>
 </body>
+
 </html>
